...
export default function PrimaryPetCard({ pet }) {
  const navigation = useNavigation();

  return (
    <TouchableOpacity
      onPress={() => navigation.navigate("PetProfileScreen", { petId: pet.id })}
      testID="primary-pet-card"
    >
      <ThemedView style={styles.container}>
        <ThemedView style={styles.imageContainer}>
          <Image
            source={{
              uri: checkImageURL(pet?.imageURL)
...
