...
              <ThemedText type="smDetail" style={styles.cancelText}>
                Cancel
              </ThemedText>
            </TouchableOpacity>
            <TouchableOpacity
              style={[styles.saveButton, { backgroundColor: activeColor }]}
              testID="save-link"
              onPress={onSave}
            >
              <ThemedText type="smDetail">Save</ThemedText>
            </TouchableOpacity>
          </>
        ) : (
...
