appId: com.ellisosen.TestReduxApp # This is an example app id. Replace it with your app id.
---
- launchApp
- tapOn: "Collection.*"
- assertVisible: "Collection Screen"
- tapOn: "Home.*"
- assertVisible: "Hello, Ellis"
